syntax = "proto3";

package orders;

option go_package = "gitlab.ozon.dev/safariproxd/homework/api/orders";

import "google/protobuf/timestamp.proto";

service OrdersService {
    rpc AcceptOrder (AcceptOrderRequest) returns (OrderResponse);
    rpc ReturnOrder (OrderIdRequest) returns (OrderResponse);
    rpc ProcessOrders (ProcessOrdersRequest) returns (ProcessResult);
    rpc ListOrders (ListOrdersRequest) returns (OrdersList);
    rpc ListReturns (ListReturnsRequest) returns (ReturnsList);
    rpc GetHistory (GetHistoryRequest) returns (OrderHistoryList);
    rpc ImportOrders (ImportOrdersRequest) returns (ImportResult);
}

message AcceptOrderRequest {
    uint64 order_id = 1;
    uint64 user_id = 2;
    google.protobuf.Timestamp expires_at = 3;
    optional PackageType package = 4;
    float weight = 5;
    float price = 6;
}

message OrderIdRequest {
    uint64 order_id = 1;
}

message ProcessOrdersRequest {
    uint64 user_id = 1;
    ActionType action = 2;
    repeated uint64 order_ids = 3;
}

enum ActionType {
    ACTION_TYPE_UNSPECIFIED = 0;
    ACTION_TYPE_ISSUE = 1;
    ACTION_TYPE_RETURN = 2;
}

message ListOrdersRequest {
    uint64 user_id = 1;
    bool in_pvz = 2;
    optional uint32 last_n = 3;
    optional Pagination pagination = 4;
}

message Pagination {
    uint32 page = 1;
    uint32 count_on_page = 2;
}

message ListReturnsRequest {
    Pagination pagination = 1;
}

message ImportOrdersRequest {
    repeated AcceptOrderRequest orders = 1;
}

message GetHistoryRequest {
    Pagination pagination = 1;
}

message OrderResponse {
    OrderStatus status = 1;
    uint64 order_id = 2;
}

message ProcessResult {
    repeated uint64 processed = 1;
    repeated uint64 errors = 2;
}

message OrdersList {
    repeated Order orders = 1;
    int32 total = 2;
}

message ReturnsList {
    repeated Order returns = 1;
}

message OrderHistoryList {
    repeated OrderHistory history = 1;
}

message ImportResult {
    int32 imported = 1;
    repeated uint64 errors = 2;
}

message Order {
    uint64 order_id = 1;
    uint64 user_id = 2;
    OrderStatus status = 3;
    google.protobuf.Timestamp expires_at = 4;
    float weight = 5;
    float total_price = 6;
    optional PackageType package = 7;
}

enum PackageType {
    PACKAGE_TYPE_UNSPECIFIED = 0;
    PACKAGE_TYPE_BAG = 1;
    PACKAGE_TYPE_BOX = 2;
    PACKAGE_TYPE_TAPE = 3;
    PACKAGE_TYPE_BAG_TAPE = 4;
    PACKAGE_TYPE_BOX_TAPE = 5;
}

enum OrderStatus {
    ORDER_STATUS_UNSPECIFIED = 0;
    ORDER_STATUS_EXPECTS = 1;
    ORDER_STATUS_ACCEPTED = 2;
    ORDER_STATUS_RETURNED = 3;
    ORDER_STATUS_DELETED = 4;
}

message OrderHistory {
    uint64 order_id = 1;
    OrderStatus status = 2;
    google.protobuf.Timestamp created_at = 3;
}
